force-app/main/default/objects/SAM_Plan__c/SAM_Plan__c.object-meta.xml
<CustomObject>
    <label>SAM Plan</label>
    <nameField>
        <displayFormat>SAMPLAN-{0000}</displayFormat>
        <label>SAM Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAM Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>