force-app/main/default/objects/SAM_Plan__c/fields/Brief_description__c.field-meta.xml
<CustomField>
    <fullName>Brief_description__c</fullName>
    <inlineHelpText>Consider the need they satisfy. For example, what market are they in, what is the scope, what is geographic, product and customer type.</inlineHelpText>
    <label>Brief description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>