force-app/main/default/objects/SAM_Plan__c/fields/IsFiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>IsFiscal_Year__c</fullName>
    <formula>AND(
DAY(TODAY()) = 1,
MONTH(TODAY()) = 4
)</formula>
    <label>IsFiscal Year</label>
    <type>Checkbox</type>
</CustomField>