force-app/main/default/objects/SAM_Plan__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAM Plans</relationshipLabel>
    <relationshipName>SAM_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>