force-app/main/default/objects/SAM_Plan__c/fields/Purpose_Statement__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Statement__c</fullName>
    <inlineHelpText>Please explain what you are trying to achieve from the relationship and how close you want it to be.</inlineHelpText>
    <label>Purpose Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>