force-app/main/default/objects/SAM_Plan__c/fields/SAM_Key_Objectives__c.field-meta.xml
<CustomField>
    <fullName>SAM_Key_Objectives__c</fullName>
    <inlineHelpText>Please capture the customers objectives in this field</inlineHelpText>
    <label>SAM Key Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>