force-app/main/default/objects/SAM_Plan__c/fields/SAM_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>SAM_Plan_Link__c</fullName>
    <inlineHelpText>Please add a link for Strategic Account Management Plan.</inlineHelpText>
    <label>SAM Plan Link</label>
    <type>Url</type>
</CustomField>