force-app/main/default/objects/SAM_Plan__c/fields/SAM_relationship__c.field-meta.xml
<CustomField>
    <fullName>SAM_relationship__c</fullName>
    <inlineHelpText>Use appendix 1 from the SAM plan to score the relationship. Scoring guidance as follows
0-5 Exploratory
6-9 Basic
10-15 Co-Operative
16-21 Interdependent
22-24 Integrated</inlineHelpText>
    <label>SAM Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exploratory</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>CoOperative</fullName>
            </value>
            <value>
                <fullName>Interdependent</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>