force-app/main/default/objects/SAM_Plan__c/fields/URN__c.field-meta.xml
<CustomField>
    <fullName>URN__c</fullName>
    <externalId>true</externalId>
    <label>URN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>