force-app/main/default/objects/SAM_Plan__c/validationRules/Stop_Org_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Org_Name_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Organisation__c ), NOT( ISNEW() ))</errorConditionFormula>
    <errorDisplayField>Organisation__c</errorDisplayField>
    <errorMessage>Changes cannot be saved. Please do not edit the Organisation field on the SAM plan record</errorMessage>
</ValidationRule>